<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/itemPrefs" android:icon="@android:drawable/ic_menu_preferences"
		android:title="@string/titlePrefs"></item>
	<!-- <item android:title="@string/titleServiceStart" android:id="@+id/itemServiceStart" 
		android:icon="@android:drawable/ic_media_play"></item> <item android:title="@string/titleServiceStop" 
		android:id="@+id/itemServiceStop" android:icon="@android:drawable/ic_media_pause"></item> -->
	<item android:id="@+id/itemToggleService" android:title="@string/titleServiceStart"
		android:icon="@android:drawable/ic_media_play" />

	<item android:title="@string/timelineTitle" android:id="@+id/itemTimeline"
		android:icon="@android:drawable/ic_menu_sort_by_size"></item>
	<item android:title="@string/titleStatus" android:id="@+id/itemStatus"
		android:icon="@android:drawable/ic_menu_edit"></item>
	<item android:title="@string/titlePurge" android:id="@+id/itemPurge"
		android:icon="@android:drawable/ic_menu_delete"></item>

</menu>
